[package]
name = "run"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
rand="*"
rayon= "*"
histogram="*"
serde_json = "*"

[profile.release]
opt-level = 3
lto = true